--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
     </head>
     <body>
 
-        <h1>como achar mulher bonitas e solteiras?</h1>
+        <h1>As mulheres mais bonitas de imbituva?</h1>
 
         <img src="https://static1-br.millenium.gg/articles/1/65/41/@/99138-thumb1-article_cover_bd-1.jpg">
 
@@ -35,9 +35,9 @@
      
      <h2> Nomes das mais lindas </h2>
 <ol>
-    <li>Geovana</li>
     <li>Ruan</li>
-    <li>Raiane</li>
-    <li>Gabriela</li>
+    <li>Ruan</li>
+    <li>Ruanete</li>
+    <li>Ruanol</li>
 </ol>
 </html>
