--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <h1>As mulheres mais bonitas de imbituva?</h1>
 
-        <img src="https://static1-br.millenium.gg/articles/1/65/41/@/99138-thumb1-article_cover_bd-1.jpg">
+        <img src="https://s2.glbimg.com/7UZvq593RCoabt6ZoMvUgCSHzZQ=/1200x/smart/filters:cover():strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/x/h/gE1aIKS3y5BvUeqkTLFw/ecvf0laxgaa8f88.jpg">
 
         <p>me manda mensagem q eu digo </p>
         <p>42 98582686 o numero ai </p>
