--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
     </head>
     <body>
 
-        <h1>As mulheres mais bonitas de imbituva?</h1>
+        <h1>Melhores personagens de Stardew Valley?</h1>
 
         <img src="https://s2.glbimg.com/7UZvq593RCoabt6ZoMvUgCSHzZQ=/1200x/smart/filters:cover():strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/x/h/gE1aIKS3y5BvUeqkTLFw/ecvf0laxgaa8f88.jpg">
 
-        <p>me manda mensagem q eu digo </p>
-        <p>42 98582686 o numero ai </p>
+        <p>lista de alguns personagens que mais gosto</p>
+        <p>e uma wiki caso queira saber mais sobre</p>
      
-     <h2> Nomes das mais lindas </h2>
+     <h2> Nomes dos personagens </h2>
 <ol>
-    <li>Ruan</li>
-    <li>Ruan</li>
-    <li>Ruanete</li>
-    <li>Ruanol</li>
+    <li>Sam</li>
+    <li>Elliot</li>
+    <li>Vicent</li>
+    <li>Penny</li>
 </ol>
-    https://pt.stardewvalleywiki.com/Stardew_Valley_Wiki   
+    https://pt.stardewvalleywiki.com/Stardew_Valley_Wiki  
   <img src=:"https://s2.glbimg.com/7UZvq593RCoabt6ZoMvUgCSHzZQ=/1200x/smart/filters:cover():strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/x/h/gE1aIKS3y5BvUeqkTLFw/ecvf0laxgaa8f88.jpg">  
 </html>
